Remove padding around button to fix search button icon getting clipped in Webkit browsers.

--- a/themes/greatermedia/assets/css/greater_media.css
+++ b/themes/greatermedia/assets/css/greater_media.css
@@ -8008,7 +8008,8 @@ a.social-share-link {
   border: none;
   width: 14px;
   background-color: transparent;
-  color: #929497; }
+  color: #929497;
+  padding: 0; }
   .header__search--submit:hover, .header__search--submit:focus,
   .header__search--cancel:hover,
   .header__search--cancel:focus {
