--- a/themes/greatermedia/assets/css/sass/components/_search.scss
+++ b/themes/greatermedia/assets/css/sass/components/_search.scss
@@ -69,6 +69,7 @@
 	width: 14px;
 	background-color: transparent;
 	color: $secondary-heading;
+	padding: 0;
 	
 	&:hover, &:focus {
 		color: $primary-link;
